--- a/src/main/resources/style.css
+++ b/src/main/resources/style.css
@@ -138,7 +138,7 @@ tr td {
     padding: 3px;
 }
 
-.heading {
+.row-heading {
     width: 30%;
 }
 
@@ -148,4 +148,22 @@ tr td {
 
 .rowodd {
     background-color: #eff4f7;
+}
+
+.class-name {
+    background-color: #d9e0e3;
+    font-size: 10pt;
+    font-weight: bold;
+    color: #5f6a6f;
+}
+
+.ok {
+    color: green;
+    font-weight: bold;
+}
+
+.fail {
+    background-color: red;
+    font-weight: bold;
+    
 }
